# DailyFlow

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: backup.yml  ci.yaml  deploy.yaml
notebooks/: 01_dataset_structure_eda.ipynb  02_mood_distribution_eda.ipynb  03_feature_relationships.ipynb  04_temporal_dynamics_and_lags.ipynb  05_feature_engineering_and_selection_strategy.ipynb
scripts/backup/: apply_retention.py  create_backup.py  main.py  utils.py  write_manifest.py
src/daily_flow/: __main__.py
src/daily_flow/analytics/datasets/: clean.py  constants.py  context.py  correlation.py  loader.py  mood_mart_sql.py  pipeline.py  prepare.py  schema.py  segmentation.py  time_series.py  visualizations.py
src/daily_flow/app/: container.py
src/daily_flow/config/: config.py  db.py  logging_setup.py  paths.py
src/daily_flow/db/: engine.py  errors.py  init.py
src/daily_flow/db/repositories/: common_mood_repo.py  idea_repo.py  ingest_run_repo.py  mood_log_repo.py
src/daily_flow/db/repositories/activity/: activity_category_repo.py  activity_repo.py  activity_usage_repo.py  category_repo.py
src/daily_flow/db/schema/: __init__.py  activity.py  applied_migration.py  audit.py  effort.py  idea.py  mood.py
src/daily_flow/entrypoints/: bot_main.py  ingest_main.py  telegram_bot_main.py
src/daily_flow/ingest/: cli.py
src/daily_flow/ingest/audit/: ingest_run.py
src/daily_flow/ingest/cleaning/: common.py  policies.py
src/daily_flow/ingest/loaders/: common_mood_log.py  mood_log.py
src/daily_flow/ingest/runner/: common_mood_log.py  mood_log.py
src/daily_flow/ingest/schemas/: base.py  common_mood_log.py  mood_log.py
src/daily_flow/ingest/sources/: common_mood_log_csv.py  mood_log_excel.py
src/daily_flow/ingest/transforms/: common_mood_log.py  mood_log.py
src/daily_flow/ingest/validators/: common.py  engine.py  metrics.py
src/daily_flow/ingest/validators/checks/: column_has_any_duplicates.py  column_has_any_na.py  column_is_integer.py  column_out_of_range.py  common.py  required_columns.py
src/daily_flow/ingest/validators/common_mood_log/: definitions.py  metrics.py  validator.py
src/daily_flow/ingest/validators/mood_log/: definitions.py  metrics.py  validator.py
src/daily_flow/services/: errors.py  some_sevice.py
src/daily_flow/services/activity/activity/: dto.py  service.py
src/daily_flow/services/activity/activity_category/: dto.py  service.py
src/daily_flow/services/activity/activity_usage/: dto.py  service.py
src/daily_flow/services/activity/category/: dto.py  service.py
src/daily_flow/services/common_mood/: dto.py  service.py
src/daily_flow/services/idea/: dto.py  service.py
src/daily_flow/services/mood_log/: dto.py  service.py
src/daily_flow/ui/telegram/: main.py  runtime.py  states.py
src/daily_flow/ui/telegram/constants/: activity.py  common_mood_log.py  idea.py  mood_log.py
src/daily_flow/ui/telegram/handlers/: __init__.py  common.py  start.py  submit_form.py
src/daily_flow/ui/telegram/keyboards/: idea.py  (+4 more)
src/daily_flow/utils/: hash.py
(+57 files in other folders)
