[project]
name = "daily-flow"
version = "0.1.0"
description = "DailyFlow is a personal tracker and analytics project for collecting daily quality of life metrics (mood, energy, stress, notes) and getting simple insights and statistics. Data is stored locally in SQLite, analyzed via Pandas, and a Telegram bot acts as an easy UI for input and viewing."
requires-python = ">=3.10,<3.12"
dependencies = [
    "pandas>=2.3,<2.4",
    "openpyxl>=3.1",
    "SQLAlchemy>=2.0,<2.1",
    "pydantic>=2.12,<2.13",
    "python-dotenv>=1.2,<1.3",
    "aiosqlite>=0.20.0",
    "matplotlib>=3.10,<3.11",
    "statsmodels>=0.14,<0.15",
    "scikit-learn>=1.6,<1.7",
    "seaborn>=0.13,<0.14",
    "scipy>=1.13,<1.14",
    "pygments>=2.19.1",
    "requests>=2.33.0",
    "tornado>=6.5.5",
    "catboost>=1.2,<1.3",
    "numpy>=2.0.0",
    "optuna>=4.0",
]
[project.optional-dependencies]
ui = [
    "aiogram>=3.0",
    "python-telegram-bot>=22.5,<23",
]
dev = [
    "pytest>=9.0,<9.1",
    "pytest-asyncio>=1.3,<1.4",
    "ruff>=0.14,<0.15",
    "mypy>=1.19,<1.20",
    "pre-commit>=4.5,<4.6",
    "build>=1.4,<1.5",
    "pip-audit>=2.8,<2.9"
]
[project.scripts]
start_telegram_bot = "daily_flow.entrypoints.telegram_bot_main:main"
ingest = "daily_flow.entrypoints.ingest_main:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["daily_flow"]

ignore_missing_imports = true
warn_unused_configs = true

follow_imports = "skip"

check_untyped_defs = false
disallow_untyped_defs = false

warn_unused_ignores = true
show_error_codes = true
pretty = true
#pretty = true
#show_error_codes = true
#
#ignore_missing_imports = true
#warn_unused_ignores = true
#no_implicit_optional = true
#
#disallow_untyped_defs = false
#check_untyped_defs = false
#
#warn_return_any = false
#warn_redundant_casts = true
#warn_unreachable = true
#
#strict_optional = true
#warn_unused_configs = true